feat: add sort options in runs and projects list api (#1381)
* feat: add sort options in runs and projects list api

* feat: add sort options in runs and projects list api

* feat: add sort options in runs and projects list api
