# api/openapispec/swagger.json
@@ -1035,6 +1035,18 @@
                         "description": "The size of the page. Default to 10",
                         "name": "pageSize",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Which field to sort the list by. Default to id",
+                        "name": "sortBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Whether to sort the list in ascending order. Default to false",
+                        "name": "ascending",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1637,6 +1649,18 @@
                         "type": "integer",
                         "description": "The size of the page. Default to 10",
                         "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Which field to sort the list by. Default to id",
+                        "name": "sortBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Whether to sort the list in ascending order. Default to false",
+                        "name": "ascending",
                         "in": "query"
                     }
                 ],
@@ -3856,17 +3880,17 @@
             "type": "string",
             "enum": [
                 "git",
-                "git",
                 "github",
                 "oci",
-                "local"
+                "local",
+                "git"
             ],
             "x-enum-varnames": [
-                "DefaultSourceType",
                 "SourceProviderTypeGit",
                 "SourceProviderTypeGithub",
                 "SourceProviderTypeOCI",
-                "SourceProviderTypeLocal"
+                "SourceProviderTypeLocal",
+                "DefaultSourceType"
             ]
         },
         "constant.StackState": {
@@ -4264,6 +4288,10 @@
                 },
                 "resourceType": {
                     "description": "ResourceType is the type of the resource.",
+                    "type": "string"
+                },
+                "resourceURN": {
+                    "description": "ResourceURN is the urn of the resource.",
                     "type": "string"
                 },
                 "status": {
