# pkg/server/handler/project/handler.go
@@ -174,6 +174,8 @@ func (h *Handler) GetProject() http.HandlerFunc {
 // @Param			fuzzyName	query		string														false	"Fuzzy match project name to filter project list by."
 // @Param			page		query		uint														false	"The current page to fetch. Default to 1"
 // @Param			pageSize	query		uint														false	"The size of the page. Default to 10"
+// @Param			sortBy		query		string														false	"Which field to sort the list by. Default to id"
+// @Param			ascending	query		bool														false	"Whether to sort the list in ascending order. Default to false"
 // @Success		200			{object}	handler.Response{data=[]response.PaginatedProjectResponse}	"Success"
 // @Failure		400			{object}	error														"Bad Request"
 // @Failure		401			{object}	error														"Unauthorized"
@@ -189,13 +191,13 @@ func (h *Handler) ListProjects() http.HandlerFunc {
 		logger.Info("Listing project...")
 
 		query := r.URL.Query()
-		filter, err := h.projectManager.BuildProjectFilter(ctx, &query)
+		filter, projectSortOptions, err := h.projectManager.BuildProjectFilterAndSortOptions(ctx, &query)
 		if err != nil {
 			render.Render(w, r, handler.FailureResponse(ctx, err))
 			return
 		}
 
-		projectEntities, err := h.projectManager.ListProjects(ctx, filter)
+		projectEntities, err := h.projectManager.ListProjects(ctx, filter, projectSortOptions)
 		if err != nil {
 			render.Render(w, r, handler.FailureResponse(ctx, err))
 			return
